# conway_rs

./: Cargo.toml  NewP7-2009-03-16.rle  README.md
src/: cell.rs  grid.rs  main.rs  seeds.rs  square.rs
