[package]

name = "conway_rs"
version = "0.0.1"
authors = ["Cam Jackson <camjackson89@gmail.com>"]

[dependencies]
rustc-serialize = "0.3.18"
rand = "*"
glium = "*"
glutin = "*"
time = "*"
getopts = "*"

# scoped_threadpool = "0.1.*"

[dependencies.scoped_threadpool]
git = "https://github.com/Kimundi/scoped-threadpool-rs"
